# keystone-backend

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  TODO.md
src/: main.cpp
src/client/: AccountManager.cpp  AccountManager.h
src/core/: Config.h  Server.cpp  Server.h
src/core/applications/: ApplicationsManager.cpp  ApplicationsManager.h
src/core/client/: AccountManager.cpp  AccountManager.h
src/core/licenses/: LicenseManager.cpp  LicenseManager.h
src/core/machines/: MachinesManager.cpp  MachinesManager.h
src/crow/: CrowApp.cpp  CrowApp.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
